// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueBucketLoader display matches snapshot showing file list 1`] = `
<div
  class="vue-bucket-loader"
>
  <input
    class="vue-bucket-loader__input"
    multiple="multiple"
    type="file"
  />
   
  <ul>
    <li>
      
        file1.jpg
        
      <button>
        
          delete
        
      </button>
    </li>
    <li>
      
        file2.jpg
        
      <button>
        
          delete
        
      </button>
    </li>
  </ul>
   
  <label
    class="vue-bucket-loader__label"
  >
    <input
      class="vue-bucket-loader__input"
      multiple="multiple"
      type="file"
    />
  </label>
</div>
`;

exports[`VueBucketLoader display matches snapshot using defaults 1`] = `
<div
  class="vue-bucket-loader"
>
  <input
    class="vue-bucket-loader__input"
    multiple="multiple"
    type="file"
  />
   
  <!---->
   
  <label
    class="vue-bucket-loader__label"
  >
    <input
      class="vue-bucket-loader__input"
      multiple="multiple"
      type="file"
    />
  </label>
</div>
`;
